[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrysol-langchain"
version = "0.1.0"
description = "Adaptive Web3 Security Intelligence Pipeline (FastAPI + LangChain)"
authors = [{ name = "SentrySol Team" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "requests==2.32.3",
  "pydantic==1.10.15",
  "langchain==0.2.6",
  "langchain-mistralai==0.1.7",
  "python-dotenv==1.0.1",
  "typing-extensions>=4.8.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = ["black==24.4.2", "ruff==0.5.5"]

[project.scripts]
sentrysol-api = "main:app"

[tool.setuptools]
py-modules = ["main", "agents", "supervisor"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
